deploy/base/unifi-controller/service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller-tcp
spec:
  type: LoadBalancer
  selector:
    app: unifi-controller
  ports:
    - protocol: TCP
      name: http
      port: 8080
      targetPort: 8080
    - protocol: TCP
      name: https
      port: 8443
      targetPort: 8080
