deploy/base/unifi-controller/service-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller-udp
spec:
  type: LoadBalancer
  selector:
    app: unifi-controller
  ports:
    - protocol: UDP
      port: 3478
      name: stun
      targetPort: 3478
    - port: 10001
      name: ubnt-discovery
      targetPort: 10001
      protocol: UDP
