deploy/base/unifi-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
spec:
  type: LoadBalancer
  selector:
    app: unifi-controller
  ports:
    - name: http
      protocol: TCP
      port: 8080
    - name: https
      protocol: TCP
      port: 8443
