deploy/base/unifi-controller/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: unifi
spec:
  rules:
    - host: unifi.r15cookie.lan
      http:
        paths:
          - path: /
            backend:
              serviceName: unifi-controller
              servicePort: 8080
